# serializer version: 1
# name: test_context[all_nodes]
  list([
    'Node(input1.mp4#0)',
    'Node(reverse#s0)',
    'Node(trim#s1)',
    'Node(concat#s2)',
    'Node(tmp.mp4#out)',
  ])
# ---
# name: test_context[all_streams]
  list([
    'Stream(Node(input1.mp4#0)#None)',
    'Stream(Node(reverse#s0)#0)',
    'Stream(Node(trim#s1)#0)',
    'Stream(Node(concat#s2)#0)',
  ])
# ---
# name: test_context[node_ids]
  dict({
    'Node(concat#s2)': 2,
    'Node(input1.mp4#0)': 0,
    'Node(reverse#s0)': 0,
    'Node(tmp.mp4#out)': 0,
    'Node(trim#s1)': 1,
  })
# ---
# name: test_context[node_labels]
  dict({
    'Node(concat#s2)': 's2',
    'Node(input1.mp4#0)': '0',
    'Node(reverse#s0)': 's0',
    'Node(tmp.mp4#out)': 'out',
    'Node(trim#s1)': 's1',
  })
# ---
# name: test_context[outgoing_nodes]
  dict({
    'Stream(Node(concat#s2)#0)': list([
      list([
        'Node(tmp.mp4#out)',
        0,
      ]),
    ]),
    'Stream(Node(input1.mp4#0)#None)': list([
      list([
        'Node(reverse#s0)',
        0,
      ]),
    ]),
    'Stream(Node(reverse#s0)#0)': list([
      list([
        'Node(trim#s1)',
        0,
      ]),
    ]),
    'Stream(Node(trim#s1)#0)': list([
      list([
        'Node(concat#s2)',
        0,
      ]),
      list([
        'Node(concat#s2)',
        1,
      ]),
    ]),
  })
# ---
# name: test_context[outgoing_streams]
  dict({
    'Node(concat#s2)': list([
      'Stream(Node(concat#s2)#0)',
    ]),
    'Node(input1.mp4#0)': list([
      'Stream(Node(input1.mp4#0)#None)',
    ]),
    'Node(reverse#s0)': list([
      'Stream(Node(reverse#s0)#0)',
    ]),
    'Node(trim#s1)': list([
      'Stream(Node(trim#s1)#0)',
    ]),
  })
# ---
